# agent_composer

./: README.md  create_structure.sh  pyproject.toml
agent_composer/: main.py
agent_composer/models/: agent_state.py  session_config.py
agent_composer/resources/remote_agents/: chatbot.py
agent_composer/resources/remote_agents/containerization/: Dockerfile  catalog-info.yaml  chatbot.py  docker-compose.yaml  requirements.txt  template.env
agent_composer/resources/virtual_node/: virtual_node.py
resources/remote_agents/: chatbot.py
